Add vscode settings (accidentally lost them earlier today 😭)

--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -1,173 +1,13 @@
 {
-    "explorer.confirmDragAndDrop": false,
-    "editor.minimap.enabled": false,
-    "terminal.integrated.tabs.location": "left",
-    "terminal.integrated.tabs.enabled": false,
-    "git.confirmSync": false,
-    "workbench.panel.defaultLocation": "right",
-    "python.terminal.executeInFileDir": true,
-    "remote.SSH.configFile": "/home/eric/.ssh/config",
-    "glassit.alpha": 255,
-    "workbench.list.smoothScrolling": true,
-    "editor.smoothScrolling": true,
-    "liveServer.settings.donotShowInfoMsg": true,
-    "editor.cursorSmoothCaretAnimation": "on",
-    "jupyter.askForKernelRestart": false,
-    "terminal.integrated.enableMultiLinePasteWarning": false,
-    "emmet.excludeLanguages": [
-        "markdown",
-        "svelte"
+    "terminal.integrated.commandsToSkipShell": [
+        "language-julia.interrupt"
     ],
-    "workbench.editorAssociations": {
-        "*.csv": "gc-excelviewer-csv-editor",
-        "git-rebase-todo": "default"
-    },
-    "workbench.iconTheme": "material-icon-theme",
-    "terminal.integrated.defaultProfile.windows": "Git Bash",
-    "workbench.startupEditor": "none",
-    "editor.wordWrap": "on",
-    "security.workspace.trust.untrustedFiles": "open",
-    "yaclock.prefix": "⏰ ",
-    "yaclock.hour12": true,
-    "yaclock.showAmPm": true,
-    "editor.fontFamily": "Consolas NF, Consolas, 'Courier New', monospace",
-    "workbench.colorCustomizations": {
-        "statusBar.background": "#0373be",//default is #0372BE
-        "statusBarItem.remoteBackground": "#727272"
-    },
-    "gitlens.hovers.currentLine.over": "line",
-    "gitlens.menus": {
-        "editor": {
-            "blame": false,
-            "clipboard": true,
-            "compare": true,
-            "history": false,
-            "remote": false
-        },
-        "editorGroup": false,
-        "editorTab": false,
-        "explorer": {
-            "clipboard": true,
-            "compare": true,
-            "history": true,
-            "remote": true
-        },
-        "scm": {
-            "authors": true
-        },
-        "scmGroupInline": {
-            "stash": true
-        },
-        "scmGroup": {
-            "compare": true,
-            "openClose": true,
-            "stash": true
-        },
-        "scmItem": {
-            "clipboard": true,
-            "compare": true,
-            "history": true,
-            "remote": false,
-            "stash": true
-        }
-    },
-    "gitlens.codeLens.authors.command": false,
-    "gitlens.codeLens.recentChange.command": false,
-    "gitlens.codeLens.scopes": [
-        "document"
-    ],
-    "gitlens.hovers.enabled": false,
-    "git.mergeEditor": false,
-    "window.menuBarVisibility": "toggle",
-    "window.autoDetectHighContrast": false,
-    "window.titleBarStyle": "custom",
-    "jupyter.widgetScriptSources": [
-        "jsdelivr.com",
-        "unpkg.com"
-    ],
-    "gitlens.views.commits.pullRequests.showForBranches": false,
-    "gitlens.views.commits.pullRequests.enabled": false,
-    "gitlens.views.commits.showBranchComparison": false,
-    "editor.tokenColorCustomizations": {
-        "textMateRules": [
-            {
-                "scope": "source.haskell",
-                "settings": {
-                    // "foreground": "##9CDCFE", default is 1e1e1e
-                }
-            }
-        ]
-    },
-    "indentRainbow.indicatorStyle": "light",
-    "editor.inlineSuggest.enabled": true,
-    "cSpell.files": [
-        "*.md"
-    ],
-    "window.restoreFullscreen": true,
-    "editor.multiCursorModifier": "ctrlCmd",
-    "cSpell.userWords": [
-        "Pedley"
-    ],
-    "extensions.ignoreRecommendations": true,
-    "git.suggestSmartCommit": false,
-    "C_Cpp.vcFormat.indent.braces": true,
-    "C_Cpp.vcFormat.indent.caseLabels": true,
-    "C_Cpp.vcFormat.indent.accessSpecifiers": true,
-    "C_Cpp.vcFormat.indent.caseContentsWhenBlock": true,
-    "explorer.confirmDelete": false,
-    "zenMode.centerLayout": false,
-    "[python]": {
-        "editor.formatOnType": true
-    },
-    "workbench.colorTheme": "Default Dark+ Experimental",
-    "background.windowBackgrounds": [
-        "/home/eric/Pictures/wallpapers/vscode/**"
-    ],
-    "background.backgroundSize": [
-        "Cover",
-        "Cover",
-        "Cover",
-        "Cover"
-    ],
-    "background.backgroundChangeTime": [
-        0,
-        0,
-        0,
-        0
-    ],
-    "background.backgroundAlignment": [
-        "Center Center",
-        "Center Center",
-        "Center Center",
-        "Center Center"
-    ],
-    "background.backgroundOpacity": [
-        0.95,
-        0.9,
-        0.9,
-        0.9
-    ],
-    "vim.useSystemClipboard": true,
-    "vim.visualModeKeyBindings": [
-        {
-            "before": ["<leader>", "c"],
-            "commands": ["editor.action.commentLine"],
-            "when": "editorTextFocus && !editorReadonly"
-        }
-    ],
-    "vim.normalModeKeyBindingsNonRecursive": [
-        {
-            "before": ["j"],
-            "after": ["g", "j"]
-        },
-        {
-            "before": ["k"],
-            "after": ["g", "k"]
-        }
-    ],
-    "python.analysis.extraPaths": [
-        "/opt/ros/noetic/lib/python3.10/site-packages"
-    ],
+    "julia.symbolCacheDownload": true,
+    "julia.enableTelemetry": false,
+    "window.zoomLevel": 1,
+    "editor.fontFamily": "'Source Code Pro', 'monospace', monospace",
     "keyboard.dispatch": "keyCode",
-    "workbench.activityBar.visible": false // for caps/esc switch in vim extension
+    "files.autoSave": "afterDelay",
+    "files.autoSaveDelay": 500,
+    "window.menuBarVisibility": "toggle"
 }
