--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -18,9 +18,9 @@ print_info() {
     # info "Icons" icons
     #info "Terminal" term
     #info "Terminal Font" term_font
-    #info "CPU" cpu
+    info "CPU" cpu
     info "CPU Usage" cpu_usage
-    # info "GPU" gpu
+    info "GPU" gpu
     info "Memory" memory
 
     # info "GPU Driver" gpu_driver  # Linux/macOS only
